Skjelett til navigation drawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
     <string name="app_name">dinDrikkeLek</string>
-    <string name="title_activity_navigation">Navigation</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="nav_spill">Spill</string>
+    <string name="nav_Endreleker">Endre/legg til leker</string>
+    <string name="nav_bilder">Bildebibliotek</string>
+    <string name="nav_instillinger">Instillinger</string>
+    <string name="nav_help">Hjelp</string>
+    <string name="nav_feedback">Gi tilbakemelding</string>
 </resources>
