Navigasjonsmeny ferdig. Ikke funksjonell(ikke programert andre fragmenter og aktiviteter)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="nav_instillinger">Instillinger</string>
     <string name="nav_help">Hjelp</string>
     <string name="nav_feedback">Gi tilbakemelding</string>
+    <string name="nav_support">Brukerstøtte</string>
     <string name="toolbar_menu_hamburger">Meny</string>
 </resources>
