--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="kamera">Kamera</string>
     <string name="tilbake">Tilbake</string>
     <string name="lagre">Lagre</string>
+
+    <string name="lagreTwist">Lagre</string>
+    <string name="legg_til_navn">Legg til navn</string>
+    <string name="legg_til_beskrivelse">Legg til beskrivelse</string>
 </resources>
