--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,5 @@
     <string name="lagre">Lagre</string>
 
     <string name="lagreTwist">Lagre</string>
-    <string name="legg_til_navn">Legg til navn</string>
-    <string name="legg_til_beskrivelse">Legg til beskrivelse</string>
+    <string name="legg_til_navn">Legg til en utfalltekst</string>
 </resources>
