--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="nav_feedback">Gi tilbakemelding</string>
     <string name="nav_support">Brukerstøtte</string>
     <string name="toolbar_menu_hamburger">Meny</string>
-    <string name="legg_til_twist">Legg til Twist</string>
+    <string name="legg_til_twist">Ny/Slett Twist</string>
     <string name="endre_twist">Endre Twist</string>
     <string name="fjern_twist">Fjern Twist</string>
     <string name="legg_til_bilde">Legg til bilde</string>
@@ -22,4 +22,6 @@
     <string name="lagreTwist">Lagre</string>
     <string name="legg_til_navn">Legg til navn</string>
     <string name="legg_til_beskrivelse">Legg til beskrivelse</string>
+    <string name="txtFaQTitle">FAQ</string>
+
 </resources>
