--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,11 +19,17 @@
     <string name="tilbake">Tilbake</string>
     <string name="lagre">Lagre</string>
     <string name="SpraakogInndata">Språk og inndata</string>
+    <string name="TrykkForSpill">Trykk hvor som helst for å begynne!</string>
     <string name="lagreTwist">Lagre</string>
     <string name="legg_til_navn">Legg til navn</string>
     <string name="legg_til_beskrivelse">Legg til beskrivelse</string>
     <string name="SpillLek">Spill!</string>
-    <string name="ConfirmedDelete">Alle twister er nå slettet</string>
+    <string name="ConfirmedDelete">Alle twister er nå slettet.</string>
+    <string name="ConfirmedDeleteBilder">Alle Bilder er nå slettet.</string>
     <string name="FAQTittel">FAQ</string>
     <string name="leggTilLek">Legg til lek</string>
+    <string name="faq_Q1">Hvordan fungerer Dindrikkelek?</string>
+    <string name="faq_A1">Dindrikkelek lar deg lage helt egne drikkeleker med egne Twister!</string>
+    <string name="faq_Q2">Hva er en Twist?</string>
+    <string name="faq_A2">En Twist er hva enn du vil det skal være. Det er et verktøy for å bestemme hva en lek innebærer og hvordan leken fungerer. </string>
 </resources>
